# white-label

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  rust-analyzer.toml  rustfmt.toml  tailwind.config.js
migrations/: 20241208154722_create_early_tables.sql  20241229075907_create_user_table.sql  20250115115053_deleted_at.sql  20250117074508_published_at.sql  20250128072940_user_details.sql  20250216162351_add_user_avatars.sql  20250226073154_add_pages.sql  20250307072048_add_artist_image.sql  20250308073755_add_release_and_track_details.sql  20250430062115_add_primary_artist_to_releases_and_tracks.sql  20250706093956_add_website_and_links_to_artists.sql  20250824062206_add_ordering_to_tracks.sql  20250827064037_add_lyrics_to_tracks.sql
src/: app.rs  database.rs  lib.rs  main.rs  setup.rs  state.rs  store.rs  utils.rs
src/components/: mod.rs  page.rs
src/components/admin/: create_artist.rs  dashboard.rs  edit_artist.rs  edit_label.rs  menu.rs  mod.rs  root.rs  shared.rs
src/components/admin/artist/: create.rs  delete.rs  edit.rs  images.rs  links.rs  menu.rs  mod.rs  music_service.rs  restore.rs  root.rs  shared.rs  social_media.rs
src/components/admin/artist/release/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  restore.rs
src/components/admin/artist/release/track/: create.rs  delete.rs  edit.rs  list.rs  mod.rs  restore.rs
src/components/admin/artist/releases/: list.rs  mod.rs
src/components/admin/dash/: artists.rs  mod.rs  pages.rs  record_label.rs  social_media_tips.rs  upcoming_release.rs
src/components/admin/page/: create.rs  delete.rs  edit.rs  mod.rs  restore.rs
src/components/admin/shared/: artist_select.rs  date_field.rs  markdown_field.rs  mod.rs  release_select.rs
src/components/artist/: home.rs  list.rs  mod.rs  release.rs
src/components/auth/: change_password.rs  login.rs  logout.rs  mod.rs  profile.rs  register.rs
src/components/files/: mod.rs  upload.rs
src/components/record_label/: footer.rs  header.rs  home.rs  mod.rs
src/components/utils/: error.rs  loading.rs  mod.rs  not_found.rs  permissions.rs  status_badge.rs  success.rs
src/config/: mod.rs  upload.rs
src/forms/: artist.rs  links.rs  mod.rs  page.rs  release.rs  track.rs  user.rs
src/models/: artist.rs  auth.rs  label.rs  mod.rs  music_service.rs  music_services.rs  page.rs  record_label.rs  release.rs  social_media.rs  test_helpers.rs  track.rs  track_with_artists.rs  traits.rs
src/routes/: artist.rs  artists.rs  auth.rs  label.rs  links.rs  menu.rs  mod.rs  page.rs  record_label.rs  release.rs  releases.rs  track.rs
src/routes/files/: mod.rs  upload.rs
src/services/: artist.rs  artists.rs  authentication_helpers.rs  links.rs  menu.rs  mod.rs  page.rs  release.rs  releases.rs  track.rs  user.rs
src/services/files/: mod.rs  progress.rs
src/utils/: files.rs  mod.rs  redirect.rs  shorten_string.rs  slugify.rs  split_at_colon.rs
style/: tailwind.css
